--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Tiup Emoji - BelegendBet</title>
-  <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-analytics.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Game Tiup Emoji - BelegendBet</title>
+  <link rel="stylesheet" href="style.css" />
+  <!-- Firebase COMPAT CDN -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics-compat.js"></script>
 </head>
 <body>
   <canvas id="particles"></canvas>
   <div class="container">
     <h1>Game Tiup Emoji</h1>
-    <input type="text" id="userId" placeholder="Masukkan USER ID">
-    <input type="text" id="kupon" placeholder="Masukkan KODE KUPON">
+    <input type="text" id="userId" placeholder="Masukkan USER ID" />
+    <input type="text" id="kupon" placeholder="Masukkan KODE KUPON" />
     <button onclick="mulaiGame()">TIUP</button>
     <div id="areaGame"></div>
   </div>
